# ia-generativa-rag

./: .env.example  .gitignore  README.md  Untitled  informe.docx  pyproject.toml  tablas_informe.html
.codex/: context.md
.github/agents/: ia-generativa-rag.agent.md
data/: catalogo_permisos.json  escenarios_impacto_licencias.json  historico_configuraciones.json  politicas_acceso.json  politicas_licencias_costos.json
data/chroma_db/: chroma.sqlite3  index_metadata.json
data/user_knowledge/: 20260422000000-DIS-contexto-base-modulo.txt  20260422000001-DIS-reglas-asignacion-roles.txt  20260422000002-PLA-contexto-base-modulo.txt  20260422000003-PLA-reglas-asignacion-roles.txt  20260422000004-FIN-contexto-base-modulo.txt  20260422000005-FIN-reglas-asignacion-roles.txt  20260422193000-PLA-auditor-cultivos-lider-operacion.txt  20260424090000-GLOBAL-politicas-licencias-costos.txt  (+3 more)
docs/: Entrega 2-Diseño y Analisis de Resultados.doc  arquitectura_diagramas.md  entrega2_diagrama_y_guia.md  entrega2_informe_completo.md  fase2_retrieval_hibrido.md  implementacion_mejoras_vectorial.md  informe_tecnico_rag.md  plan_base_vectorial.md  plan_entrega2.md  plan_impacto_licencias_costos.md  reporte_calidad_retrievers.json  reporte_calidad_retrievers.md  resumen_implementacion_simple.md  script_presentacion.md
scripts/: evaluate_retrievers.py  reindex_vector_store.py
tests/: golden_dataset_adm.json  test_api.py  test_enrichment_api.py  test_hybrid_retriever.py  test_index_metadata.py  test_license_impact.py  test_quality_metrics.py  test_recommender.py  test_vector_retriever.py
(+16 files in other folders)
