[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "rag-adm"
version = "0.1.0"
description = "Prototipo minimo del asistente RAG para configuracion de roles y permisos en Evergreen ADM"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1.0",
  "httpx>=0.28,<1.0",
  "pydantic>=2.9,<3.0",
  "uvicorn>=0.32,<1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<9.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/rag_adm"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
