[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "rag-adm"
version = "0.1.0"
description = "Prototipo minimo del asistente RAG para configuracion de roles y permisos en Evergreen ADM"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1.0",
  "httpx>=0.28,<1.0",
  "langchain>=0.3,<0.4",
  "langchain-chroma>=0.2,<0.3",
  "langchain-community>=0.3,<0.4",
  "langchain-text-splitters>=0.3,<0.4",
  "pydantic>=2.9,<3.0",
  "fastembed>=0.4,<0.5; python_version < '3.13'",
  "chromadb>=1.0,<2.0",
  "pymupdf>=1.24,<2.0",
  "uvicorn>=0.32,<1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<9.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/rag_adm"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
